--- a/style.css
+++ b/style.css
@@ -181,3 +181,58 @@ main {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+@media screen and (max-width: 700px)
+{
+   h1 {
+     font-size: 20px;
+     color:black;
+    
+   }
+
+   .glass {
+   flex-wrap: wrap;
+   background: white;
+  min-height: 50vh;
+  width: 30%;
+  }
+
+ .games {
+   margin: 0rem;
+   display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
+ }
+
+ main {
+  font-family: "Poppins", sans-serif;
+  min-height: 10vh;
+  background: linear-gradient(to right top, #65dfc9, #6cdbeb);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.circle1,
+.circle2 {
+  background: white;
+  background: linear-gradient(
+    to right bottom,
+    rgba(255, 255, 255, 0.8),
+    rgba(255, 255, 255, 0.3)
+  );
+  height: 10rem;
+  width: 10rem;
+  position: absolute;
+  border-radius: 50%;
+}
+
+.progress::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: rgb(236, 236, 236);
+  position: absolute;
+  left: 30%;
+}
